# echo

./: .gitignore  README.md  pyproject.toml
docs/: BIBLIS.md  DECISIONS.md  ECHO_MATH.md  STYLE.md
notebooks/: 01_uniformize_to_normal.ipynb  02_echo_pipeline.ipynb  03_compare.ipynb  04_score_lr.ipynb
src/echo/: __init__.py  core.py  lr.py  synthetic.py  transform.py
tests/: test_core.py  test_lr.py  test_synthetic.py  test_transform.py
