[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo"
version = "0.0.1"
description = "Train/test sample comparison and similarity quantification"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hernando" }]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize syntax)
]
ignore = [
    "E501",  # line too long — let the reader judge
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]            # tests can use patterns bugbear dislikes
"notebooks/*" = ["E", "F"]   # notebooks are exploratory; don't nitpick
